--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,14 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <scope>2.9.2</scope>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <scope>2.9.2</scope>
+            <version>2.9.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
