--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,13 @@ logging:
 spring:
   messages:
     basename: messages
+  security:
+    user:
+      name: ksu
+      password: ksu
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
